# CodePilot-Lite

./: .env.example  .gitignore  Makefile  README.md  ai-coding-assistant-design-spec.md  pyproject.toml  requirements.txt  start.sh
app/: cli.py  cli_demo.py  settings.py
app/agents/: __init__.py  main_agent.py
app/commands/: __init__.py  analyze.md  explain.md  fix.md  generate.md  implement.md  loader.py  overview.md  review.md
app/skills/: README.md  __init__.py
app/tools/: __init__.py  bug_fix_tool.py  command_tool.py  dependency_tool.py  entrypoint_tool.py  error_parser_tool.py  file_summary_tool.py  path_safety.py  project_tree_tool.py  (+3 more)
configs/: app.yaml  eval.yaml  model.yaml  policy.yaml  tools.yaml
frameworks/HelloAgents/: .gitignore  README.md  pyproject.toml  requirements.txt
frameworks/HelloAgents/docs/: file_tools.md  session-persistence-guide.md  skills-quickstart.md  skills-usage-guide.md  todowrite-usage-guide.md
frameworks/HelloAgents/examples/: async_agent_demo.py  circuit_breaker_demo.py  context_engineering_demo.py  devlog_demo.py  fastapi_sse_server.py  file_tools_demo.py  observability_demo.py  parallel_tools_demo.py  session_persistence_demo.py  skills_demo.py  sse_client.html  subagent_demo.py  test_sse_client.py  todowrite_demo.py  todowrite_real_world.py  tool_response_demo.py
frameworks/HelloAgents/examples/custom_tools/: advanced_tool_template.py  code_formatter_tool.py  complete_example.py  expandable_tool_template.py  simple_tool_template.py  weather_tool.py
frameworks/HelloAgents/hello_agents/: __init__.py  version.py
frameworks/HelloAgents/hello_agents/agents/: __init__.py  factory.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
frameworks/HelloAgents/hello_agents/context/: __init__.py  builder.py  history.py  token_counter.py  truncator.py
frameworks/HelloAgents/hello_agents/core/: agent.py  config.py  llm.py  llm_adapters.py
frameworks/HelloAgents/hello_agents/skills/: __init__.py
frameworks/HelloAgents/hello_agents/tools/: base.py
frameworks/HelloAgents/hello_agents/tools/builtin/: devlog_tool.py  file_tools.py
frameworks/HelloAgents/tests/: test_all_agents.py  test_async_lifecycle.py  test_circuit_breaker.py  test_context_engineering.py  test_custom_tools.py  test_devlog_tool.py  test_file_tools.py  test_llm_function_calling.py  test_observability.py  test_session_persistence.py  test_skills.py  test_smart_summary.py  test_subagent_mechanism.py  test_todowrite.py  test_tool_filter.py  test_tool_response_protocol.py  test_trace_integration.py
scripts/: build_index.py  check_env.py  compare_runs.py  quality_gate.py  run_eval.py  smoke_cli.py  start.sh
tests/: test_commands.py
(+52 files in other folders)
